# atlas-bi-library-py

./: .browserslistrc  .buildinfo  .codeclimate.yml  .dockerignore  .editorconfig  .env.backend.template  .gitignore  .gitlab-ci.yml  .htmlhintrc  .jshintignore  .pre-commit-config.yaml  .prettierignore  .releaserc  .snyk  .travis.yml  Dockerfile  README.md  atlas-demo-seed_script.sql  docker-compose.yaml  genindex.html  heroku.yml  index.html  lighthouserc.js  objects.inv  package-lock.json  package.json  poetry_to_requirements.py  postcss.config.js  pyproject.toml  readme.md  readme.rst  release_tasks.sh  renovate.json  requirements.txt  search.html  searchindex.js  setup.cfg  sonar-project.properties  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/atlas/: demo.doctree  deploy.doctree  etl.doctree  license.doctree  readme.doctree  requirements.doctree
.doctrees/atlas/development/: auth.doctree  development.doctree  index.doctree  search.doctree  test.doctree
.doctrees/atlas/updates/: changelog.doctree  index.doctree  to_2021-03-1.doctree
.doctrees/atlas/web/: admin.doctree  analytics.doctree  groups.doctree  index.doctree  initiatives.doctree  mail.doctree  projects.doctree  reports.doctree  search.doctree  terms.doctree  users.doctree
.github/codeql/: codeql-config.yml
.github/workflows/: browserstack.yml  build_deb.yml  cancel.yml  ci.yml  codacy-analysis.yml  codeql-analysis.yml  codeql.yml  codespell.yml  demo.yml  docs.yml  heroku.yml  lighthouse.yaml  lint.yml  main.yml  quality.yml  release.yml  test.yml  test_ubuntu.yml  update.yaml
.gitlab/: docs.yml  lint.yml  publish.yml  py.yml  static.yml
atlas/: .coveragerc  .gitignore  Aptfile  Procfile  buildpack-run.sh  demo.html  deploy.html  etl.html  license.html  manage.py  readme.html  requirements.html  requirements.txt
atlas/analytics/: urls.py  views.py  visits.py
atlas/analytics/templates/: analytics.html.dj
atlas/analytics/templatetags/: details_parser.py  useragent.py
atlas/analytics/tests/: test_browser.py  test_views.py
atlas/analytics/views/: errors.py  trace.py  views.py  visits.py
atlas/atlas/: __init__.py  asgi.py  browserstack_runner.py  celery.py  context_processors.py  decorators.py  no_pass_auth.py  testutils.py  urls.py  wsgi-demo.py  wsgi.py
atlas/atlas/settings/: base.py  demo.py  dev.py  prod.py  settings.py  test.py  test_browser.py
atlas/atlas/templatetags/: dates.py  helpers.py  markdown.py  static.py
atlas/collection/: apps.py  urls.py  views.py
atlas/collection/templates/: collection.html.dj  collection_agreements.html.dj  collection_comments.html.dj  collection_details.html.dj  collection_edit.html.dj  collection_links.html.dj  collection_new.html.dj  collections.html.dj
atlas/collection/tests/: test_views.py
atlas/collection/views/: comments.py  views.py
atlas/defaults/: Cube.xml
atlas/development/: auth.html  development.html  index.html  search.html  test.html
atlas/etl/: tasks.py  urls.py  views.py
atlas/etl/tasks/: functions.py
atlas/etl/views/: __init__.py  base.py  collections.py  groups.py  initiatives.py  lookups.py  projects.py  reports.py  terms.py  users.py
atlas/group/: urls.py  views.py
atlas/index/: models-dev-dbo.py  models-dev.py  models.py  models_psql.py  models_sqlsvr.py  routers.py  urls.py  views.py
atlas/index/fixtures/: estimatedrunfrequency.yaml  financialimpact.yaml  fragility.yaml  fragilitytag.yaml  initial.yaml  maintenancelogstatus.yaml  maintenanceschedule.yaml  organizationalvalue.yaml  projectmilestonefrequency.yaml  reporttypes.yaml  rolepermissionlinks.yaml  rolepermissions.yaml  runfrequency.yaml  seed.yaml  strategicimportance.yaml  test.yaml  userroles.yaml
atlas/index/templates/: index.html.dj  video.html.dj
atlas/index/tests/: test_browser.py  test_views.py
atlas/initiative/: apps.py  urls.py  views.py
atlas/initiative/templates/: initiative.html.dj  initiative_details.html.dj  initiative_edit.html.dj  initiative_new.html.dj  initiatives.html.dj
atlas/initiative/tests/: test_views.py
atlas/mail/: __init__.py  notification.py  urls.py  views.py
atlas/mail/tests/: test_views.py
atlas/project/: urls.py  views.py
atlas/project/templates/: project.html.dj  project_agreements.html.dj  project_comments.html.dj  project_details.html.dj  project_edit.html.dj  project_links.html.dj  project_new.html.dj  projects.html.dj
atlas/project/tests/: test_views.py
atlas/project/views/: comments.py  views.py
atlas/report/: urls.py  views.py
atlas/report/templates/: report.html.dj  report_comments.html.dj  (+5 more)
atlas/search/: urls.py  views.py
atlas/settings/: tests.py  urls.py  views.py
atlas/sketch/: apps.py  urls.py  views.py
atlas/task/: urls.py  views.py
atlas/templates/: comments.html.dj  error.html.dj  footer.html.dj  head.html.dj  layout.html.dj  modals.html.dj  nav.html.dj  search.html.dj  site_message.html.dj  tail.html.dj
atlas/term/: apps.py  urls.py  views.py
atlas/updates/: changelog.html  index.html  to_2021-03-1.html
atlas/user/: stars.py  urls.py  views.py
atlas/web/: admin.html  analytics.html  groups.html  index.html  initiatives.html  mail.html  projects.html  reports.html  search.html  terms.html  users.html
backend/: Dockerfile  pyproject.toml
backend/api/: api.py  celery.py  db_routers.py  permissions.py  serializers.py  settings.py  solr.py  urls.py
backend/atlas_index/: admin.py  apps.py  models.py
docs/atlas/: deploy.rst
frontend/: Dockerfile  biome.json  package.json  pnpm-lock.yaml
gulpfile.js/: index.js
gulpfile.js/tasks/: build.js  font.js  packages.js  scripts.js  style.js  styles.js  watch.js
node_scripts/: lighthouse.js
publish/: celery.conf  celery.service  celery_beat.service  fabfile.py  gunicorn.service  install.sh  new_install.sh  settings.py
scripts/: fontawesome.js
scripts/atlas-bi-<version>/: atlas_celeryd.conf  install.sh  readme.md
solr/: managed-schema  readme.md  setup_cores.sh  solr.in.sh  solrconfig.xml  synonyms.txt
solr/atlas/: managed-schema  solrconfig.xml  synonyms.txt
solr/solr-9.0.0/: solr.in.sh
(+520 files in other folders)
