[tool.poetry]
name = "atlas-of-information-management"
version = "0.1.0"
description = ""
authors = [
    "Paula Courville",
    "Darrel Drake",
    "Dee Anna Hillebrand",
    "Scott Manley",
    "Madeline Matz",
    "Christopher Pickering <cpickering@rhc.net>",
    "Sean Pickering <spickering@rhc.net>",
    "Dan Ryan",
    "Richard Schissler",
    "Eric Shultz"
]
license = "GPL-3.0-or-later"
readme = "readme.md"
classifiers=[
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: Healthcare Industry",
    "Natural Language :: English",
]
keywords = [
    "business intelligence",
    "documentation",
    "reporting",
    "healthcare",
]
packages = [
    { include = "atlas" }
]
homepage = "https://atlas-py.herokuapp.com"
repository = "https://github.com/Riverside-Healthcare/Atlas-Py"
documentation = "https://riverside-healthcare.github.io/Atlas-Py/"


[tool.poetry.dependencies]
python = "^3.8"
django-compressor = "^4.0"
django-htmlmin = "^0.11.0"
django-redis-sessions = "^0.6.2"
django-compression-middleware = "^0.4.1"
relative-to-now = "^1.0.0"
djangosaml2 = "^1.5.1"
django-mathfilters = "^1.0.0"
Django = "^4.0.6"
psycopg2-binary = "^2.9.3"
markdown-it-py = "^2.1.0"
psycopg2 = "^2.9.3"
gevent = "^21.12.0"
regex = "^2022.7.25"
Pillow = "^9.2.0"
mdit-py-plugins = "^0.3.0"
linkify-it-py = "^2.0.0"
django-chunked-iterator = "^0.6.1"
simplejson = "^3.17.6"
django-celery-beat = "^2.3.0"
django-celery-results = "^2.4.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
pysolr = "^3.9.0"
mssql-django = "^1.1.3"
django-gulp = "^4.1.0"
django-settings-export = "^1.2.1"
tomli = "^2.0.1"
bleach = "^5.0.1"
pymemcache = "^3.5.2"



[tool.poetry.dev-dependencies]
djlint = "^1.9.2"
django-debug-toolbar = "^3.5.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max_line_length = 99
include = '\.py$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data

      # atlas
      | migrations
      | static
      | templates
    )/
    '''

[tool.isort]
profile = "black"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"


[tool.pylint.master]
ignore="migrations,settings,analytics,mail,index,report,models*.py,apps.py,__init__.py,apps.py,urls.py"

[tool.pylint.messages_control]
disable = "R0903, E0401, C0415, F0401"


[tool.pylint.format]
max-line-length = 99
max-module-lines=1000

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,x,id,e,me,l,_,pk"
include-naming-hint="no"

[tool.djangodoctor]
directories = ["atlas"]

[tool.djlint]
blank_line_after_tag = "extends,load, endcompress"
blank_line_before_tag = "extends, load, compress"
profile = "django"
format_css = true
format_js = true

