[tool.poetry]
name = "atlas-bi-library"
version = "0.1.0"
description = ""
authors = [
    "Paula Courville",
    "Darrel Drake",
    "Dee Anna Hillebrand",
    "Scott Manley",
    "Madeline Matz",
    "Christopher Pickering <christopher@atlas.bi>",
    "Sean Pickering <spickering@rhc.net>",
    "Dan Ryan <dan@atlas.bi>",
    "Richard Schissler",
    "Eric Shultz"
]
license = "GPL-3.0-or-later"
readme = "readme.md"
classifiers=[
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: django",
    "Intended Audience :: Healthcare Industry",
    "Natural Language :: English",
]
keywords = [
    "business intelligence",
    "documentation",
    "reporting",
    "healthcare",
]
packages = [
    { include = "atlas" }
]
homepage = "https://atlas.bi"
repository = "https://github.com/atlas-bi/atlas-bi-library-py"
documentation = "https://atlas.bi/docs"


[tool.poetry.dependencies]
python = "^3.8"
django-compressor = "^4.0"
django-htmlmin = "^0.11.0"
django-redis-sessions = "^0.6.2"
django-compression-middleware = "^0.4.1"
relative-to-now = "^1.0.0"
djangosaml2 = "^1.5.1"
django-mathfilters = "^1.0.0"
Django = "^4.0.6"
psycopg2-binary = "^2.9.3"
markdown-it-py = "^2.1.0"
psycopg2 = "^2.9.3"
gevent = "^21.12.0"
regex = "^2022.7.25"
Pillow = "^9.2.0"
mdit-py-plugins = "^0.3.0"
linkify-it-py = "^2.0.0"
django-chunked-iterator = "^0.6.1"
simplejson = "^3.17.6"
django-celery-beat = "^2.3.0"
django-celery-results = "^2.4.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
pysolr = "^3.9.0"
mssql-django = "^1.1.3"
django-settings-export = "^1.2.1"
tomli = "^2.0.1"
bleach = "^5.0.1"
pymemcache = "^3.5.2"
django-fullurl = "^1.3"
ua-parser = "^0.16.1"
whitenoise = "^6.2.0"
Brotli = "^1.0.9"
django-extensions = "^3.2.1"
PyYAML = "^6.0"



[tool.poetry.dev-dependencies]
djlint = "^1.9.2"
django-debug-toolbar = "^3.5.0"
tox = "^3.26.0"
isort = "^5.10.1"
black = "^22.8.0"
types-requests = "^2.28.11"
types-pytz = "^2022.2.1"
types-bleach = "^5.0.3"
types-python-dateutil = "^2.8.19"
mypy = "^0.982"
pylint = "^2.15.3"
flake8 = "^5.0.4"
flake8-variables-names = "^0.0.5"
flake8-print = "^5.0.0"
flake8-docstrings = "^1.6.0"
flake8-simplify = "^0.19.3"
flake8-bugbear = "^22.9.23"
flake8-builtins = "^2.0.0"
pep8-naming = "^0.13.2"
flake8-comprehensions = "^3.10.0"
flake8-bandit = "^4.1.1"
flake8-eradicate = "^1.4.0"
coverage = "^6.4.4"
selenium = "^4.5.0"
django-gulp = "^4.1.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max_line_length = 99
include = '\.py$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data

      # atlas
      | migrations
      | static
      | templates
      | solr
    )/
    '''

[tool.isort]
profile = "black"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"


[tool.pylint.master]
ignore="solr,migrations,mail,models-dev-dbo.py,models-dev.py,models_psql.py,models_sqlsrvr.py,apps.py,__init__.py,apps.py,urls.py"

[tool.pylint.messages_control]
disable = "R0903, E0401, C0415, F0401, C0301, E1101, R0901, W0221"


[tool.pylint.format]
max-line-length = 99
max-module-lines=1000

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,x,id,e,me,l,_,pk,im,hl"
include-naming-hint="no"

[tool.djangodoctor]
directories = ["atlas"]

[tool.djlint]
blank_line_after_tag = "extends,load, endcompress, endblock"
blank_line_before_tag = "extends, load, compress, block"
profile = "django"
format_css = true
format_js = true
extend_exclude = 'atlas/templates/handlebars/search.html,atlas/report/templates/report/profile.html.dj, atlas/mail/tesmplates/mail/email_text.html.dj'

[tool.djlint.per-file-ignores]
"atlas/analytics/templates/analytics/index.html.dj" = "H021"
"atlas/etl/templates/etl/index.html.dj" = "D018"
"atlas/report/templates/report/editor/modal.html.dj" = "H023"
"atlas/templates/handlebars/search.html" = "D018"
"atlas/templates/handlebars/search_pagination.html" = "H021"
"atlas/report/templates/report/sections/details.html.dj" = "H023"
"atlas/templates/layout.html.dj" = "H016,H030,H031,H021"
"atlas/templates/registration/login.html" = "H030,H031"
"atlas/search/templates/search/ajax.html.dj" = "H021"
"atlas/index/templates/index/about.html.dj" = "H021, H023"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true


[[tool.mypy.overrides]]
module = '*.migrations.*'
ignore_errors = true

[[tool.mypy.overrides]]
module = '*.atlas.atlas.settings.*'
ignore_errors = true

[[tool.mypy.overrides]]
module = '*.tests.*'
ignore_errors = true


[[tool.mypy.overrides]]
module = '*.mail.*'
ignore_errors = true
